src/scss/entry/experienceDetails.scss
/* ... */
.test-pilot-settings-container {
    padding: 8px;

    .test-pilot-settings {
        .test-pilot-programs {
            display: flex;
            flex-direction: column;
            gap: 4px;

            .test-pilot-program {
                padding: 4px;
                &.active {
                    background: var(--RS_BACKGROUND-4-COLOR);
                }
                .program-btn {
                    width: 100%;
                    text-align: left;

                    .program-name-container {
                        font-weight: bold;
                        display: flex;
                        gap: 4px;
                        align-items: center;

                        .program-platform-icons {
                            height: 28px;
                            .program-platform-icon {
                                &,
                                .roseal-icon {
                                    width: 28px;
                                    height: 28px;
                                }
                            }
                        }
                    }

                    .no-treatments-text {
                        font-size: 12px;
                    }

                    .channel-name-text {
                        font-family: "Builder Mono";
                        font-size: 14px;
                        overflow: hidden;
                        word-wrap: break-word;
                    }

                    .program-platforms-container {
                        font-family: "Builder Mono";
                        font-size: 10px;
                    }
                }
            }
        }
    }

    .testing-instructions-container {
        margin-top: 10px;
    }
}

.very-scared-play-button-ooo-scary-ooo {
    z-index: 999999;
    pointer-events: none;
    user-select: none;
}

.experience-top-songs-section {
    .artist-name {
        margin-top: auto;
    }

    .game-carousel {
        max-width: 966px;
    }
}

@keyframes region-spin {
    0% {
        transform: rotate(0deg);
    }
    100% {
        transform: rotate(360deg);
    }
}

.preferred-region-btn.searching .roseal-icon {
    animation: region-spin 2s infinite;
}

#friends-who-played-container {
    position: absolute;
    top: calc(100% - 32px);

    .game-friends-social-count {
        margin-top: 20px;
        width: fit-content;
        border-radius: 999px;
        display: flex;
        justify-content: center;
        align-items: center;
        padding: 6px 12px;
        gap: 4px;
        background-color: var(--RS_SECONDARY-BACKGROUND-COLOR);
        color: var(--RS_SECONDARY-TEXT-COLOR);

        .count-text {
            font-size: 12px;
            font-weight: 700;
        }
    }
}

.friends-played-modal {
    .friend-list {
        max-height: 600px;
        overflow: auto;
        display: flex;
        flex-direction: column;
        gap: 1em;

        .friend-item {
            display: flex;
            gap: 0.5em;
            align-items: center;

            .friend-thumbnail {
                width: 60px;
                height: 60px;
                flex-shrink: 0;
            }

            .friend-username {
                color: var(--RS_TEXT-SECONDARY-COLOR);
                font-size: 12px;
            }

            .friend-last-played-date {
                margin-left: auto;
            }
        }
    }
}

